--- a/slides/introduction.html
+++ b/slides/introduction.html
@@ -460,7 +460,8 @@
 
 				<section>
 					<h3>Ethics</h3>
-					<img  data-src="https://ubc-library-rc.github.io/intro-machine-learning/content/images/Ethics.jpg" alt="Ethics" width="700">
+					<img  data-src="https://ubc-library-rc.github.io/intro-machine-learning/content/images/Ethics.jpg" alt="Ethics" width="800">
+					<p style="color:blue;font-size:11px;">Image from: Lepri, Bruno, Nuria Oliver, and Alex Pentland. "Ethical machines: The human-centric use of artificial intelligence." IScience 24.3 (2021): 102249.</p>
 
 					<aside class="notes">
 						
