Adding link to Colab

--- a/slides/introduction.html
+++ b/slides/introduction.html
@@ -104,7 +104,6 @@
 				<section data-background="#e6f7ff">
 					<h3>Pre-workshop setup</h3>
 					<ul>
-						<li class="fragment fade-in-then-semi-out">UBC CYZYGY <a href="https://ubc.syzygy.ca/">(https://ubc.syzygy.ca/)</a></li>
 						<li class="fragment fade-in-then-semi-out">GOOGLE COLAB <a href="https://colab.research.google.com/">(https://colab.research.google.com/)</a></li>
 					</ul>
 					<aside class="notes">
@@ -342,6 +341,9 @@
 
 				<section>
 					<h3>Open Jupyter Notebooks</h3>
+					<a target="_blank" href="https://colab.research.google.com/github/ubc-library-rc/intro-machine-learning/blob/main/machine-learning-examples.ipynb">
+						<img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab"/>
+					  </a>
 					<aside class="notes">
 					</aside>
 				</section>
